@@ -4,6 +4,7 @@ Changelog
 2.13.1 (unreleased)
 -------------------
 
+- LP #642728: Fixed TypeError on nested multi part messages in MailHost.
 
 2.13.0 (2010-07-13)
 -------------------
